--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-plugin-transform-class-properties": "6.22.0",
-    "react": "15.4.0",
-    "react-dom": "15.4.0",
-    "axios": "^0.19.0"
+    "brace": "^0.11.1",
+    "react": "^16.4.1",
+    "react-ace": "^7.0.2",
+    "react-dom": "^16.8.6",
+    "react-select": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
