--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-plugin-transform-class-properties": "6.22.0",
+    "bootstrap": "^4.3.1",
     "brace": "^0.11.1",
-    "react": "^16.4.1",
+    "react": "^16.8.6",
     "react-ace": "^7.0.2",
+    "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-select": "^3.0.4"
   },
