--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-ace": "^7.0.2",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
-    "react-select": "^3.0.4"
+    "react-select": "^3.0.4",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
